@@ -16,18 +16,30 @@
         <!-- dependency versions (its easier to include version in dependency
         but if multiple dependencies are linked, use a property for single
         dependency source) -->
+<<<<<<< HEAD
         <jetty.version>9.2.21.v20170120</jetty.version>
         <powermock.version>1.6.6</powermock.version>
+=======
+        <jetty.version>9.3.9.v20160517</jetty.version>
+>>>>>>> JMRI/master
         <slf4j.version>1.7.21</slf4j.version>
         <jackson.version>2.8.5</jackson.version>
         <jogamp.version>2.3.2</jogamp.version>
+        <openlcb.version>0.7.14</openlcb.version>
+        <netbeans.version>RELEASE82</netbeans.version>
         <!-- test environment -->
         <jmri.path.program>${basedir}</jmri.path.program>
         <jmri.prefsdir>${basedir}/temp</jmri.prefsdir>
         <jinput.plugins>net.bobis.jinput.hidraw.HidRawEnvironmentPlugin</jinput.plugins>
-        <ant.version>1.9.7</ant.version>
+        <ant.version>1.10.1</ant.version>
         <ant.jvm.args></ant.jvm.args>
         <argLine>-Xmx1536m</argLine>
+<<<<<<< HEAD
+=======
+        <powermock.version>1.6.6</powermock.version>
+        <surefire.version>2.20</surefire.version>
+        <surefile.printSummary>false</surefile.printSummary>
+>>>>>>> JMRI/master
     </properties>
     <scm>
         <connection>scm:git:https://github.com/JMRI/JMRI.git</connection>
@@ -50,6 +62,7 @@
             </properties>
             <build>
                 <plugins>
+                    <!-- use surefire for all test
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
@@ -72,15 +85,17 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <!-- use surefire (maven default test harness) only for line endings -->
+                    -->
+                    <!-- use surefire (maven default test harness) only for line endings
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
+                        <version>${surefire.version}</version>
                         <configuration>
                             <test>jmri.util.FileLineEndingsTest</test>
                         </configuration>
                     </plugin>
+                    -->
                     <plugin>
                         <groupId>org.eluder.coveralls</groupId>
                         <artifactId>coveralls-maven-plugin</artifactId>
@@ -94,6 +109,7 @@
                             </sourceDirectories>
                         </configuration>
                     </plugin>
+<<<<<<< HEAD
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
@@ -122,6 +138,8 @@
                             </execution>
                         </executions>
                     </plugin>
+=======
+>>>>>>> JMRI/master
                 </plugins>
             </build>
         </profile>
@@ -154,7 +172,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
+                        <version>${surefire.version}</version>
                         <configuration>
                             <test>jmri.util.FileLineEndingsTest</test>
                         </configuration>
@@ -170,7 +188,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
+                        <version>${surefire.version}</version>
                         <configuration>
                             <skipTests>true</skipTests>
                         </configuration>
@@ -287,7 +305,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.6.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -324,11 +342,19 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>${surefire.version}</version>
                 <configuration>
                     <excludes>
+<<<<<<< HEAD
                         <!-- TEMPORARY since NCE tests sometimes fail to load classes -->
                         <exclude>jmri.jmrix.nce.**</exclude>
+=======
+                        <!-- ignore until #3340 is merged -->
+                        <exclude>jmri.jmrix.nce.Nce*</exclude>
+                        <exclude>%regex[jmri/jmrix/nce/(boosterprog|cab|clockmon|consist|macro|ncemon|networkdriver|packetgen|simulator|swing|usbdriver|usbinterface)/.*/Nce.*]</exclude>
+                        <!-- ignore until #3492 is resolved -->
+                        <exclude>%regex[jmri.jmrix.loconet.locormi.LnMessage[Client|Server]Test]</exclude>
+>>>>>>> JMRI/master
                         <!-- ignore until #2601 is resolved -->
                         <exclude>jmri.jmrit.decoderdefn.DuplicateTest</exclude>
                         <!-- ignore to avoid duplicate test runs -->
@@ -348,16 +374,31 @@
                         <jmri.prefsdir>${basedir}/temp</jmri.prefsdir>
                         <jinput.plugins>net.bobis.jinput.hidraw.HidRawEnvironmentPlugin</jinput.plugins>
                     </systemPropertyVariables>
+                    <trimStackTrace>false</trimStackTrace>
                     <workingDirectory>${basedir}</workingDirectory>
-                    <argLine>@{argLine}</argLine>
+                    <argLine>@{argLine} -Djava.security.manager -Djava.security.policy=${basedir}/lib/security.policy</argLine>
                     <useSystemClassLoader>true</useSystemClassLoader>
                     <useManifestOnlyJar>false</useManifestOnlyJar>
+<<<<<<< HEAD
                     <!-- uncomment to force each test into new context (DO NOT attempt on CI servers)
+=======
+>>>>>>> JMRI/master
                     <forkCount>1</forkCount>
+                    <!-- uncomment to force each test into new context (DO NOT attempt on CI servers)
                     <reuseForks>false</reuseForks>
                     -->
                     <!-- uncomment to really ensure tests are independent -->
                     <runOrder>random</runOrder>
+<<<<<<< HEAD
+=======
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.surefire</groupId>
+                            <artifactId>surefire-junit47</artifactId>
+                            <version>${surefire.version}</version>
+                        </dependency>
+                    </dependencies>
+>>>>>>> JMRI/master
                 </configuration>
             </plugin>
             <plugin>
@@ -397,7 +438,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.12</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>timestamp-property</id>
@@ -424,7 +465,11 @@
                     <sourcepath>${basedir}/java/src:${project.build.directory}/generated-sources/javacc:${project.build.directory}/generated-sources/jjtree</sourcepath>
                     <!-- remove -Xdoclint:-missing to get warnings about missing Javadoc tags -->
                     <!-- change from default 100 warnings -->
+<<<<<<< HEAD
                     <additionalparam>-breakiterator -Xdoclint:all -Xdoclint:-missing -Xmaxwarns 4000</additionalparam>
+=======
+                    <additionalparam>-breakiterator -Xdoclint:all -Xdoclint:-missing -Xmaxwarns 2350</additionalparam>
+>>>>>>> JMRI/master
                     <author>true</author><!-- default -->
                     <use>true</use><!-- default -->
                     <failOnError>true</failOnError><!-- default -->
@@ -486,6 +531,7 @@
                 ]]>
                     </bottom>
                     <links>
+<<<<<<< HEAD
                         <link>http://java.sun.com/products/javacomm/reference/api/</link>
                         <link>http://users.frii.com/jarvi/rxtx/doc/</link>
                         <link>http://www.jdom.org/docs/apidocs/</link>
@@ -500,17 +546,51 @@
                 </configuration>
             </plugin>
             <!-- disable by default, enabled only in travis-coverage, for now
+=======
+                        <link>http://docs.oracle.com/javase/8/docs/api/</link>
+                        <link>http://java.sun.com/products/javacomm/reference/api/</link>
+                        <link>https://www.javadoc.io/doc/com.github.purejavacomm/purejavacomm/1.0.2.RELEASE</link>
+                        <link>http://www.jdom.org/docs/apidocs/</link>
+                        <link>http://javacsv.sourceforge.net/</link>
+                        <link>http://static.javadoc.io/com.fasterxml.jackson.core/jackson-databind/${jackson.version}/</link>
+                        <link>http://logging.apache.org/log4j/1.2/apidocs/</link>
+                        <link>http://download.java.net/media/java3d/javadoc/1.3.2/</link>
+                        <link>https://jogamp.org/deployment/jogamp-next/javadoc/joal/javadoc/</link>
+                        <link>https://static.javadoc.io/org.openlcb/openlcb/${openlcb.version}/</link>
+                        <link>https://commons.apache.org/proper/commons-lang/javadocs/api-release/</link>
+                    </links>
+                </configuration>
+            </plugin>
+>>>>>>> JMRI/master
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.8</version>
+                <version>0.7.9</version>
                 <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
                     <execution>
                         <id>default-check</id>
                         <goals>
                             <goal>check</goal>
                         </goals>
                         <configuration>
+                            <excludes>
+                                <File>**/*Test*.class</File>
+                                <!-- Exclude testing infrastructure classes -->
+                                <File>**/*Scaffold.class"</File>
+                                <File>**/*JUnit*.class</File>
+                                <File>**/*Demo.class</File>
+                                <File>**/*Mock*.class</File>
+                                <File>jmri/jmrit/symbolicprog/tabbedframe/CheckProgrammerNames.class</File>
+                                <File>jmri/jmrix/openlcb/SampleFactory.class</File>
+                                <File>jmri/util/swing/SamplePane.class</File>
+                                <File>apps/tests/Log4JFixture.class</File>
+                            </excludes>
                             <rules>
                                 <rule>
                                     <element>BUNDLE</element>
@@ -518,12 +598,12 @@
                                         <limit>
                                             <counter>LINE</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.28</minimum>
+                                            <minimum>0.30</minimum>
                                         </limit>
                                         <limit>
                                             <counter>CLASS</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.50</minimum>
+                                            <minimum>0.70</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
@@ -542,7 +622,10 @@
                     </execution>
                 </executions>
             </plugin>
+<<<<<<< HEAD
             -->
+=======
+>>>>>>> JMRI/master
         </plugins>
     </build>
     <reporting>
@@ -550,7 +633,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>${surefire.version}</version>
                 <configuration>
                     <showSuccess>false</showSuccess>
                 </configuration>
@@ -657,11 +740,14 @@
             <artifactId>jython-standalone</artifactId>
             <version>2.7.0</version>
         </dependency>
+<<<<<<< HEAD
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>jbidibc-rxtx-2.2</artifactId>
             <version>1.6.0</version>
         </dependency>
+=======
+>>>>>>> JMRI/master
         <!--
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -697,11 +783,14 @@
             <version>5.0.2</version>
         </dependency>
         -->
+<<<<<<< HEAD
         <dependency>
             <groupId>com.serialio</groupId>
             <artifactId>serialio</artifactId>
             <version>1.0</version>
         </dependency>
+=======
+>>>>>>> JMRI/master
         <!--
         <dependency>
             <groupId>org.jogamp.jogl</groupId>
@@ -739,8 +828,11 @@
             <artifactId>jna-platform</artifactId>
             <version>4.4.0</version>
 <<<<<<< HEAD
+<<<<<<< HEAD
         </dependency>       
 =======
+=======
+>>>>>>> JMRI/master
         </dependency>
 >>>>>>> JMRI/master
         <dependency>
@@ -767,12 +859,16 @@
         <dependency>
             <groupId>org.openlcb</groupId>
             <artifactId>openlcb</artifactId>
+<<<<<<< HEAD
             <version>0.7.14</version>
+=======
+            <version>${openlcb.version}</version>
+>>>>>>> JMRI/master
         </dependency>
         <dependency>
-            <groupId>ch.ntb</groupId>
-            <artifactId>usb</artifactId>
-            <version>0.5.7</version>
+            <groupId>org.usb4java</groupId>
+            <artifactId>usb4java-javax</artifactId>
+            <version>1.2.0</version>
         </dependency>
         <dependency>
             <groupId>net.jcip</groupId>
@@ -802,6 +898,7 @@
             <version>1.2.0</version>
             <exclusions>
 <<<<<<< HEAD
+<<<<<<< HEAD
                <exclusion>
                   <groupId>org.slf4j</groupId>
                   <artifactId>slf4j-jdk14</artifactId>
@@ -815,6 +912,8 @@
                   <artifactId>android-sdk-addon</artifactId>
                </exclusion>
 =======
+=======
+>>>>>>> JMRI/master
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-jdk14</artifactId>
@@ -827,6 +926,17 @@
                     <groupId>com.digi</groupId>
                     <artifactId>android-sdk-addon</artifactId>
                 </exclusion>
+<<<<<<< HEAD
+>>>>>>> JMRI/master
+=======
+                <exclusion>
+                    <groupId>org.rxtx</groupId>
+                    <artifactId>rxtx</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.rxtx</groupId>
+                    <artifactId>rxtx-native</artifactId>
+                </exclusion>
 >>>>>>> JMRI/master
             </exclusions>
         </dependency>
@@ -835,6 +945,11 @@
             <artifactId>powermock-module-junit4</artifactId>
             <version>${powermock.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.purejavacomm</groupId>
+            <artifactId>purejavacomm</artifactId>
+            <version>1.0.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
@@ -869,10 +984,32 @@
             <scope>test</scope>
         </dependency>
         -->
+<<<<<<< HEAD
+=======
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-openide-util-lookup</artifactId>
+            <version>${netbeans.version}</version>
+            <scope>compile</scope>
+        </dependency>
+>>>>>>> JMRI/master
     </dependencies>
 
     <repositories>
         <!--
+<<<<<<< HEAD
+=======
+        Repository hosting NetBeans modules, especially APIs.
+        Versions are based on IDE releases, e.g.: RELEASE691
+        To create your own repository, use: nbm:populate-repository
+        -->
+        <repository>
+            <id>netbeans</id>
+            <name>NetBeans</name>
+            <url>http://bits.netbeans.org/nexus/content/groups/netbeans/</url>
+        </repository>
+        <!--
+>>>>>>> JMRI/master
         Repository hosting libraries not available through maven.org
         -->
         <repository>
